# kittypaws

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yaml  docker-compose.yml  prometheus.yml
.github/workflow/: main.yml
.github/workflows/: main.yml  release.yml  rust.yml  test.yml
configs/: all.yml  dropping.yml  dumb_test.json  dumb_test.yml  restarting.yml  timestamps.yml
docker/: Dockerfile  deathloop.yml  docker-compose.yml  dropping.yml
paws_config/: Cargo.toml
paws_config/src/: lib.rs
paws_install/: Cargo.toml
paws_install/src/: lib.rs
paws_monitoring/: Cargo.toml
paws_monitoring/src/: lib.rs  telegraf.rs
paws_rest/: Cargo.toml
paws_rest/src/: lib.rs
plugins/deathloop/: Cargo.toml
plugins/deathloop/src/: lib.rs
plugins/dropper/: main.py
pluginterface/: Cargo.toml
pluginterface/src/: lib.rs
scripts/: env_setup.sh  time-test.py
src/: intervals.rs  main.rs  plug.rs  plugin_logger.rs  settings.rs  stdout_styling.rs
src/plug/: bash_plugin.rs  python_plugin.rs
webui/: package-lock.json  package.json  tailwind.config.ts
webui/src/: app.html
webui/src/routes/: +layout.svelte  +page.svelte
webui/src/routes/plugins/: +page.svelte
