[package]
name = "kittypaws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "paws"
path = "src/main.rs"

[dependencies]
libloading = "0.5"
config = "0.13.1"
pyo3 = {"version" = "0.17.3", features = ["auto-initialize"]}
gag = "1.0.0"
lazy_static = "1.4.0"
iso8601-duration = "0.1.0"
rand = "0.8.5"
chrono = "0.4.23"
prometheus_exporter = "0.8.5"
prometheus = "0.13.3"
