workspace = { members = ["paws_config", "paws_install"] }
[package]
name = "kittypaws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "paws"
path = "src/main.rs"

[dependencies]
gag = "1.0.0"
rand = "0.8.5"
chrono = "0.4.23"
libloading = "0.5"
serde_yaml = "0.9.34"
paws_config = { path = "paws_config" }
paws_install = { path = "paws_install" }
iso8601 = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
pyo3 = {"version" = "0.17.3", features = ["auto-initialize"]}
clap = { version = "4.5.4", features = ["derive"] }
