[package]
name = "paws_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {"version" = "0.17.3", features = ["auto-initialize"]}
iso8601 = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
