[package]
name = "paws_install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.11.1", features = ["rustls", "rustls-native-certs", "rustls-webpki", "https-rustls"] }
zip = "0.6.6"
