[package]
name = "paws_install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envtestkit = "1.1.2"
minreq = { version = "2.11.1", features = ["rustls", "rustls-native-certs", "rustls-webpki", "https-rustls"] }
rpassword = "7.3.1"
zip = "0.6.6"

[dev-dependencies]
tempfile = "3.10.1"
