[package]
name = "deathloop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
docker-api = "0.12"
tokio = "1.22.0"
iso8601-duration = "0.1.0"
pluginterface = { path = "../../pluginterface", version = "*" }

[lib]
name = "deathloop"
crate-type = ["dylib"]
